--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- !!! Default title of your site -->
-  <title>Maxlinn's Docsify Template Demo</title>
+  <title>Maxlinn's Jupyter Site Template Demo</title>
   <!-- !!! Favicon, aka the icon of your site. Hereby is a svg of "gift" from icomoon.io. -->
   <link rel="icon" href="favicon.svg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -21,7 +21,7 @@
   <script>
     window.$docsify = {
       // !!! Your site name on the top-left sidebar corner
-      name: 'linn-docsify-template',
+      name: 'linn-jupyter-site-template',
       // !!! Your site url of the top-right github icon
       repo: 'https://github.com/Maxlinn/linn-docsify-template',
       // OK, that's all, enjoy!
