--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       timeUpdater: {
         text: '>Last Updated At: {docsify-updated}', // Prompt of updated date message, will show on every page
         formatUpdated: '{YYYY}/{MM}/{DD}',
+        whereToPlace: 'top'
       },
 
       pagination: {
@@ -71,7 +72,7 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-updated@1/src/time-updater.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"></script>
   <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 
