--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <!-- !!! Default title of your site -->
-  <title>Maxlinn's Jupyter Site Template Demo</title>
+  <title>主页名</title>
   <!-- !!! Favicon, aka the icon of your site. Hereby is a svg of "gift" from icomoon.io. -->
-  <link rel="icon" href="favicon.svg">
+  <!-- <link rel="icon" href="favicon.svg"> -->
+  <link rel="icon"
+    href="data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'%3E%3Ctitle%3E%3C/title%3E%3Cg id='icomoon-ignore'%3E%3C/g%3E%3Cpath d='M385.758 160c9.063-6.44 17.756-13.608 25.722-21.574 16.701-16.701 27.873-37.25 31.456-57.861 3.929-22.593-1.836-43.57-15.815-57.55-11.15-11.149-26.255-17.043-43.682-17.043-24.816 0-50.961 11.912-71.73 32.681-33.238 33.238-52.613 79.119-63.038 111.861-7.72-32.901-23.103-77.322-53.009-107.229-16.047-16.046-36.557-24.285-55.923-24.285-15.827 0-30.89 5.502-42.13 16.743-24.993 24.994-21.616 68.893 7.543 98.052 10.396 10.396 22.549 19.031 35.36 26.206h-108.512v128h32v224h384v-224.001h32v-128h-94.242zM337.163 64.109c13.862-13.862 31.161-22.137 46.275-22.137 5.35 0 12.854 1.127 18.225 6.499 13.015 13.014 5.706 43.154-15.64 64.499-21.973 21.973-51.53 37.084-77.216 47.030h-25.336c9.284-28.774 26.029-68.228 53.692-95.891zM116.967 80.445c-0.351-4.56-0.025-13.124 6.098-19.247 5.122-5.122 11.894-6.198 16.674-6.198v0c10.629 0 21.734 5.008 30.466 13.74 16.936 16.936 30.883 43.886 40.334 77.938 0.255 0.92 0.504 1.835 0.748 2.743-0.908-0.243-1.823-0.492-2.743-0.748-34.052-9.452-61.001-23.399-77.937-40.335-7.914-7.913-12.885-18.080-13.64-27.893zM224 480h-128v-208h128v208zM224 256h-160v-64h160v64zM416 480h-128v-208h128v208zM448 256h-160v-64h160v64z'%3E%3C/path%3E%3C/svg%3E"
+    type="image/svg+xml" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -21,15 +24,15 @@
   <script>
     window.$docsify = {
       // !!! Your site name on the top-left sidebar corner
-      name: 'linn-jupyter-site-template',
+      name: '项目名',
       // !!! Your site url of the top-right github icon
-      repo: 'https://github.com/Maxlinn/linn-jupyter-site-template',
+      repo: 'https://github.com/Maxlinn/项目名',
       // OK, that's all, enjoy!
       // Change followings if you what you are doing.
 
-      loadNavbar: true,
+      loadNavbar: false,
       loadSidebar: true,
-      loadFooter: true,
+      loadFooter: false, // for least files, create footer by https://github.com/erickjx/docsify-footer-enh
       mergeNavbar: true, // navbar will be merged with the sidebar on smaller screens
       subMaxLevel: 3, // sidebar item to show current page headings
       sidebarDisplayLevel: 1, // nested sidebar collapse plugin
@@ -44,23 +47,50 @@
 
       search: {
         maxAge: 86400000, // ttl of index file in localstorage, one day on default
-        placeholder: 'Type to search',
-        noData: 'No Results!',
+        placeholder: '点击以搜索',
+        noData: '没有结果',
         depth: 2
       },
 
       timeUpdater: {
-        text: '>Last Updated At: {docsify-updated}', // Prompt of updated date message, will show on every page
+        text: '>上次更新于：{docsify-updated}', // Prompt of updated date message, will show on every page
         formatUpdated: '{YYYY}/{MM}/{DD}',
-        whereToPlace: 'top'
+        whereToPlace: 'top' // can be 'bottom'
       },
 
       pagination: {
-        previousText: 'Prev Page',
-        nextText: 'Next Page',
+        previousText: '上一页',
+        nextText: '下一页',
         crossChapter: true,
         crossChapterText: true,
       },
+
+      footer: {
+        copy: '站点由 <a href="https://github.com/Maxlinn/">Maxlinn</a> 创建并维护，\
+        使用 <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a> 协议来分发， \
+        转载时请注明与原文链接。',
+        auth: '站点使用了<a href="https://github.com/Maxlinn/linn-jupyter-site-template">Maxlinn/linn-jupyter-site-template</a> 模板来快速创建。',
+        pre: '<hr/>',
+        style: 'text-align: left;',
+        class: 'footer-class',
+      },
+
+      plugins: [
+        // handcraft highlight support
+        function (hook, vm) {
+          hook.beforeEach(function (html) {
+            let candidates = html.match(/==(.+?)==/g);
+            // without if, error occurs when there's no match
+            if (candidates) {
+              for (var i = 0; i < candidates.length; i++) {
+                html = html.replace(candidates[i],
+                  `<mark>` + candidates[i].replace(/==/g, "") + `</mark>`);
+              }
+            }
+            return html;
+          })
+        }
+      ]
     }
   </script>
   <!-- Docsify v4 -->
@@ -105,6 +135,9 @@
   <!-- Did not function properly -->
   <!-- https://github.com/njleonzhang/docsify-edit-on-github -->
   <!-- https://docsify.js.org/#/plugins?id=gitalk -->
+
+  <!-- Footer Plugin -->
+  <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
 </body>
 
 </html>
